# genius-crm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  EMAIL_MARKETING_PLAN.md  README.md  commands.txt  genius-platform-notes.md  manage.py  pyproject.toml  todo.md
crm/: admin.py  email_utils.py  models.py  stripe_utils.py  tagging.py  tests.py  validators.py  views.py
crm/migrations/: 0001_initial.py  0002_badge_emailsequence_emailsequencestep_funnel_and_more.py  0003_pipeline_contact_address_contact_country_and_more.py  0004_funnel_tag.py  0005_alter_contact_source.py  0006_contact_utm_campaign_contact_utm_content_and_more.py  0007_funnel_offer_end_date_orderbump.py  0008_funnelpage_template.py  0009_broadcast_scheduled_at_broadcast_status.py
docs/: TAGGING_SYSTEM.md
funnels/templates/: opt-in-1.html
genius_platform/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: countdown.css
static/js/: countdown.js
templates/: base.html  broadcast.html  contacts.html  course_detail.html  courses.html  dashboard.html  funnel_detail.html  funnel_templates.html  funnels.html  optin.html  optin_thankyou.html  orders.html  pipeline_list.html  products.html  sequences.html
templates/admin/: funnel_templates.html
templates/emails/: base.html  broadcast.html
templates/funnel/: base.html  landing.html  offer-expired.html  order.html  thank-you.html  upsell.html
templates/funnel/templates/: order_template_1.html  pack_preview.html  sales_template_1.html  thank_you_template_1.html  upsell_template_1.html
templates/registration/: login.html
