[project]
requires-python = ">=3.9"

[tool.black]
line-length = 79
target-version = ["py39"]
strict = true
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | migrations
    | staticfiles
    | media
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip = [".venv", "migrations"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "T20",   # flake8-print
    "PIE",   # flake8-pie
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "RUF012",  # mutable class attributes - Django pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.bandit]
targets = ["."]
skips = ["B404", "B603", "B105"]
